Trying to fix the problem with fullscreeing the video on iphone

--- a/style.css
+++ b/style.css
@@ -509,11 +509,6 @@ li a{
         font-size: 3vw;
     }
 
-    .card video{
-        display: none;
-    }
-
-
 }
 
 @media screen and (max-width: 800px) {
